# python-shop

./: .gitignore  alembic.ini  pyproject.toml  tasks  test.py
migrations/: env.py
migrations/versions/: 2346d79abdfc_initial_revision.py  7a6f8e736553_initial_revision.py
shop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shop/domain/entities/: orders.py  products.py
shop/domain/repositories/: orders.py  products.py
shop/infrastructure/: database.py  dependencies.py
shop/infrastructure/orm/: __init__.py  order_items.py  orders.py  products.py
shop/infrastructure/repositories/: orders.py  products.py
shop/services/: products.py
