[project]
name = "shop"
version = "0.1.0"
description = "Production-ready FastAPI backend for quiz application"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Bartlomiej", email = "your.email@example.com" }
]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",

  # Database
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg2>=2.9.12",

  # Validation / settings
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",

  # Auth / security
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",

  # Code quality
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/your-username/quiz-app-api"
Repository = "https://github.com/your-username/quiz-app-api"
Issues = "https://github.com/your-username/quiz-app-api/issues"

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# -------------------------
# Ruff - linting + formatting
# -------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # import sorting
  "B",    # bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
  "ASYNC",# async rules
  "C4",   # comprehensions
  "ARG",  # unused arguments
  "RUF"   # Ruff-specific rules
]
ignore = [
  "B008", # FastAPI Depends() in function defaults
  "ARG001"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -------------------------
# Mypy - static typing
# -------------------------

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "jose.*",
  "passlib.*"
]
ignore_missing_imports = true

# -------------------------
# Pytest
# -------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=app",
  "--cov-report=term-missing"
]

# -------------------------
# Coverage
# -------------------------

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError"
]